feat(perm): Implement Set Permission VP to Validated #209
