# proto/verana/perm/v1/tx.swagger.json
@@ -666,8 +666,13 @@
     "verana.perm.v1.MsgSetPermissionVPToValidated": {
       "type": "object",
       "properties": {
-        "creator": {
-          "type": "string"
+        "authority": {
+          "type": "string",
+          "title": "authority is the group account on whose behalf this message is executed"
+        },
+        "operator": {
+          "type": "string",
+          "title": "operator is the account authorized by the authority to run this Msg"
         },
         "id": {
           "type": "string",
@@ -688,9 +693,6 @@
         "verification_fees": {
           "type": "string",
           "format": "uint64"
-        },
-        "country": {
-          "type": "string"
         },
         "vp_summary_digest_sri": {
           "type": "string"
